--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
       <nav class="collapse navbar-collapse" role="navigation" id="raw-navbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" target="_blank">About</a></li>
-          <li><a href="#" target="_blank">Documentation</a></li>
-          <li><a href="#" target="_blank">Tutorial</a></li>
-          <li><a href="/test_sb_internal_playground" target="_blank">Other Tools</a></li>
+          <li><a href="#" target="/littlePrince">Book</a></li>
+          <li><a href="#" target="/littlePrince/pet.html">Pet</a></li>
+          <li><a href="#" target="/duckgame/">Game</a></li>
+          <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
         </ul>
       </nav>
 
