--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
       <nav class="collapse navbar-collapse" role="navigation" id="raw-navbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" target="/littlePrince">Book</a></li>
-          <li><a href="#" target="/littlePrince/pet.html">Pet</a></li>
-          <li><a href="#" target="/duckgame/">Game</a></li>
+          <li><a href="/littlePrince" target="_blank">Book</a></li>
+          <li><a href="/littlePrince/pet.html" target="_blank">Pet</a></li>
+          <li><a href="/duckgame/" target="_blank">Game</a></li>
           <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
         </ul>
       </nav>
