--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="raw">
 <head>
-  <title>S&B Data Dashboard</title>
+  <title>Data Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Keywords" content="SDD,visualization,data,design,spreadsheet,interface,vector graphics,SVG,PNG,JSON">
@@ -9,7 +9,7 @@
   <meta name="author" content="Ke Yang">
 
   <!-- Social Networks meta tags -->
-  <meta property="og:title" content="S&B Data Dashboard">
+  <meta property="og:title" content="Data Dashboard">
   <meta property="og:description" content="The missing link between spreadsheets and data visualization.">
   <meta property="og:image" content="#">
   <meta property="og:image:width" content="1200">
@@ -47,7 +47,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/" target="_blank">
-          <img alt="Data Dashboard" src="imgs/sblogo.png">
+          <img alt="Data Dashboard" src="imgs/profile.png">
         </a>
       </div>
 
