--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Data visualization tool created for S & B Engineers and Constructors</p>
+          <p>Data visualization tool created for you</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-          <p><a href="mailto:keyang1@sbec.com"><i class="fa fa-envelope breath-right"></i>keyang1@sbec.com</a></p>
+          <p><a href="mailto:twitchcoyote@gmail.com"><i class="fa fa-envelope breath-right"></i>twitchcoyote@gmail.com</a></p>
           
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
-          <p><a href="http://sbec.com"><i class="fa fa-link breath-right"></i>SBEC</a></p>
+          <p><a href="http://coyoteke.com"><i class="fa fa-link breath-right"></i>CoyoteKe.com</a></p>
         </div>
       </div>
     </div>
