--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <link rel="stylesheet" type="text/css" href="lib/codemirror/lib/codemirror.css">
 
   <link rel="stylesheet" href="css/raw.css"/>
-  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="imgs/profile.png" type="image/x-icon">
+  <link rel="shortcut icon" href="imgs/profile.png" type="image/x-icon">
 
 </head>
 
@@ -57,10 +57,11 @@
           <li><a href="/littlePrince/pet.html" target="_blank">Pet</a></li>
           <li><a href="/duckgame/" target="_blank">Game</a></li>
           <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
+          <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
         </ul>
       </nav>
 
-      <!--<span class="pull-left">The missing link between spreadsheets and vector graphics</span class="pull-left">-->
+ 
 
     </div>
   </header>
