--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           <li><a href="/duckgame/" target="_blank">Game</a></li>
           <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
           <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
+          <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
+          <li><a href="https://kbmusee.art/" target="_blank">Art Works</a></li>
         </ul>
       </nav>
 
