--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
 
       <nav class="collapse navbar-collapse" role="navigation" id="raw-navbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/littlePrince" target="_blank">Book</a></li>
-          <li><a href="/littlePrince/pet.html" target="_blank">Pet</a></li>
-          <li><a href="/duckgame/" target="_blank">Game</a></li>
+          <li><a href="/littlePrince" target="_blank">3D Book</a></li>
+          <li><a href="/littlePrince/pet.html" target="_blank">3D Pet</a></li>
+          <li><a href="/duckgame/" target="_blank">2D Game</a></li>
           <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
           <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
           <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
           <li><a href="https://kbmusee.art/" target="_blank">Art Works</a></li>
+          <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Most Recent Book: Zebra</a></li>
         </ul>
       </nav>
 
