--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
           <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
           <li><a href="https://kbmusee.art/" target="_blank">Art Works</a></li>
-          <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Most Recent Book: Zebra</a></li>
+          <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Zebra</a></li>
         </ul>
       </nav>
 
