--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
           <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
           <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
-          <li><a href="https://kbmusee.art/" target="_blank">Art Works</a></li>
+          <li><a href="https://kbmusee.github.io" target="_blank">Art Works</a></li>
           <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Zebra</a></li>
         </ul>
       </nav>
