--- a/index.html
+++ b/index.html
@@ -52,19 +52,33 @@
       </div>
 
       <nav class="collapse navbar-collapse" role="navigation" id="raw-navbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/littlePrince" target="_blank">3D Book</a></li>
-          <li><a href="/littlePrince/pet.html" target="_blank">3D Pet</a></li>
-          <li><a href="/duckgame/" target="_blank">2D Game</a></li>
-          <li><a href="https://coyoteke.com/patents" target="_blank">Patents</a></li>
-          <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
-          <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
-          <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
-          <li><a href="https://kbmusee.github.io" target="_blank">Art Works</a></li>
-          <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Zebra</a></li>
-          
-        </ul>
-      </nav>
+  <ul class="nav navbar-nav navbar-right">
+
+    <li><a href="/AgentDuck/" target="_blank">AI Agent</a></li>
+
+    <!-- Interactive Dropdown -->
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        Interactive <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a href="/duckgame/" target="_blank">2D Game</a></li>
+        <li role="separator" class="divider"></li>
+        <li class="dropdown-header">3D</li>
+        <li><a href="/littlePrince" target="_blank">3D Book</a></li>
+        <li><a href="/littlePrince/pet.html" target="_blank">3D Pet</a></li>
+      </ul>
+    </li>
+
+    <li><a href="https://coyoteke.com/patents" target="_blank">Patents</a></li>
+    <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
+    <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
+    <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
+    <li><a href="https://kbmusee.github.io" target="_blank">Art Works</a></li>
+    <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Zebra</a></li>
+
+  </ul>
+</nav>
 
  
 
