--- a/index.html
+++ b/index.html
@@ -70,16 +70,24 @@
       </ul>
     </li>
 
+    <!-- Tools Dropdown -->
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        Tools <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
+        <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
+        <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
+      </ul>
+    </li>
+
     <li><a href="https://coyoteke.com/patents" target="_blank">Patents</a></li>
-    <li><a href="/test_sb_internal_playground" target="_blank">PDF Editing Tools</a></li>
-    <li><a href="/elastic_tutorial" target="_blank">Elasticsearch Tutorials</a></li>
-    <li><a href="https://classic.yarnpkg.com/en/package/react-ant-scheduler" target="_blank">React Ant Scheduler</a></li>
     <li><a href="https://kbmusee.github.io" target="_blank">Art Works</a></li>
     <li><a href="https://www.amazon.com/dp/B0DB1FH32T" target="_blank">Zebra</a></li>
 
   </ul>
 </nav>
-
  
 
     </div>
