--- a/index.html
+++ b/index.html
@@ -179,9 +179,16 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-
-  <!-- google analytics -->
-  <script src="js/analytics.js"></script>
+  
+   <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1D01X0MDCH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-1D01X0MDCH');
+  </script>
 
 
 </body>
