--- a/index.html
+++ b/index.html
@@ -180,16 +180,15 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
   
-   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1D01X0MDCH"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFREM81DZ4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    gtag('config', 'G-1D01X0MDCH');
+    gtag('config', 'G-QFREM81DZ4');
   </script>
-
 
 </body>
 </html>
