--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <nav class="collapse navbar-collapse" role="navigation" id="raw-navbar">
   <ul class="nav navbar-nav navbar-right">
 
-    <li><a href="/AgentDuck/" target="_blank">AI Agent</a></li>
+    <li><a href="/GameEngineForPlanets/" target="_blank">Game Engine</a></li>
 
     <!-- Interactive Dropdown -->
     <li class="dropdown">
